<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtTitle"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMonthly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/txtMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="1dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="20sp"
        android:hint="@string/hint1"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtYears"
        app:layout_constraintStart_toStartOf="@+id/txtYears"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/hint2"
        app:layout_constraintBottom_toTopOf="@+id/txtLoan"
        app:layout_constraintEnd_toEndOf="@+id/txtLoan"
        app:layout_constraintTop_toBottomOf="@+id/txtMonthly" />

    <EditText
        android:id="@+id/txtLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        android:hint="@string/hint3"
        app:layout_constraintBottom_toTopOf="@+id/btnInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYears" />

    <Button
        android:id="@+id/btnInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnInterest"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imgOpening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoan" />

    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="307dp"
        android:layout_height="114dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInterest"
        app:srcCompat="@drawable/mortgage" />

</androidx.constraintlayout.widget.ConstraintLayout>